code/apps/datastore/base/datastore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datastore
  namespace: msp-system
  labels:
    app: datastore
spec:
  selector:
    matchLabels:
      app: datastore
  template:
    metadata:
      labels:
        app: datastore
    spec:
      containers:
      - name: datastore
        # image: uasbase2.pmel.noaa.gov:448/test/datastore@sha256:1efee0c698b3037b822d00237114e25aacad59942c9dd9199168cc2631143d8d
        image: registry-msp:5000/msp/datastore:v1.0.2
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        ports:
        - name: http
          # containerPort: 8000
          containerPort: 8080
          protocol: TCP
      #   volumeMounts:
      #     - name: erddap-datasetd-storage
      #       mountPath: /datasets.d
      #       # subPath: datasets.d
      #     - name: erddap-content-storage
      #       mountPath: /usr/local/tomcat/content/erddap
      #       # subPath: erddap
      #     - name: erddap-data-pv-storage
      #       mountPath: /erddapData
      #       # subPath: erddapData
      # volumes:
      #   - name: erddap-datasetd-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-datasetsd-pvc
      #   - name: erddap-content-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-content-pvc
      #   - name: erddap-data-pv-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-data-pvc
